<resources>
    <string name="drop_down_list_header_default_text">点击可以刷新</string>
    <string name="drop_down_list_header_pull_text">下拉可以刷新</string>
    <string name="drop_down_list_header_release_text">松开可以刷新</string>
    <string name="drop_down_list_header_loading_text">加载中…</string>
    <string name="drop_down_list_footer_default_text">更多</string>
    <string name="drop_down_list_footer_loading_text">加载中…</string>
    <string name="drop_down_list_footer_no_more_text">没有更多了</string>
    <string name="title_activity_add">Add Contact</string>
    <string name="title_activity_friend_profile">Friend Profile</string>
    <string name="title_activity_group_profile">Group Info</string>
    <string name="title_activity_profile_settings">Profile options</string>
    <string name="add_contact">Add Contact</string>
    <string name="login_must_fill_in">You must fill in a profile name</string>
    <string name="login_login">Login</string>
    <string name="login_account_hint">Profile Name</string>
    <string name="login_create_account_text">Create Tox Profile</string>
    <string name="login_bad_login">Profile name was not recognised</string>
    <string name="create_name_hint">Profile Name</string>
    <string name="create_text">Secure messaging for everyone.</string>
    <string name="create_register">Register</string>
    <string name="create_registering">Registering account…</string>
    <string name="create_register_incog">Register Incognito</string>
    <string name="create_import_profile">Import Profile</string>
    <string name="create_skip">Allow anyone to add you using your profile name</string>
    <string name="create_must_fill_in">You must fill in all fields</string>
    <string name="create_bad_profile_name">Profile name can\'t contain spaces or slashes or be empty</string>
    <string name="create_profile_exists">This profile name already exists</string>
    <string name="import_profile_invalid_file">The file chosen is not a valid tox profile </string>
    <string name="create_account_exists">This name is already taken</string>
    <string name="create_account_internal_error">Internal WangWang Error. Please restart and try again</string>
    <string name="create_account_reached_registration_limit">You can only register 13 accounts an hour. You have reached this limit</string>
    <string name="create_account_unknown_error">Unknown registration error, please try again later</string>
    <string name="create_account_kalium_link_error">Failed to load a required library. Unable to create non-incognito accounts</string>
    <string name="create_account_invalid_domain">Invalid toxme domain supplied.</string>
    <string name="create_account_connection_error">Registration Failed: Could not connect to the internet.</string>
    <string name="create_account_encrypted_profile_error">WangWang does not support encrypted profiles yet</string>
    <string name="create_account_load_profile_unknown">Unknown error loading profile</string>
    <string name="main_no_active_chat">No active chat. Start one by choosing a friend from the pane on the left.</string>
    <string name="main_recent_no">No recent conversations</string>
    <string name="main_no_internet">No Internet Connection</string>
    <string name="main_not_connected">No internet connection has been detected. Without an internet connection, you will have
        limited functionality unless you are using WangWang for LAN only</string>
    <string name="main_mobile_disabled">Currently offline as Wi-Fi only mode is enabled. Touch to open settings. </string>
    <string name="search_all_contacts">Search all contacts</string>
    <string name="chat_enter_message">Send a message</string>
    <string name="chat_file_transfer">File transfer</string>
    <string name="chat_message_too_long">This message is too long and cannot be sent</string>
    <string name="chat_ft_failed_friend_offline">Sending failed - cannot send file to offline friend</string>
    <string name="addpane_friend_label">Friend</string>
    <string name="addpane_group_label">Group</string>
    <string name="addfriend_friend_key">Your friend\'s Tox ID</string>
    <string name="addfriend_friend_message">Send a message with your request</string>
    <string name="addfriend_button">Add Friend</string>
    <string name="addfriend_friend_added">Friend Added</string>
    <string name="addfriend_friend_exists">Friend already exists</string>
    <string name="scanqr_button">Scan a QR code</string>
    <string name="invalid_friend_ID">Invalid Tox ID</string>
    <string name="addfriend_nick_hint">Set a nickname for your friend</string>
    <string name="addfriend_optional_title">Optional Extras</string>
    <string name="dialog_pin">Enter your friend\'s pin</string>
    <string name="addfriend_invalid_pin">Invalid Pin</string>
    <string name="addfriend_own_key">You cannot add yourself</string>
    <string name="addfriend_friend_pin_title">Enter Friend\'s Pin</string>
    <string name="addfriend_friend_pin_text">Enter Friend\'s Pin</string>
    <string name="addfriend_default_message">Hey! Please accept my friend request</string>
    <string name="addgroup_group_id">The group\'s ID</string>
    <string name="addgroup_button">Join Group</string>
    <string name="addgroup_group_added">Group Joined</string>
    <string name="addgroup_group_exists">Group already exists</string>
    <string name="invalid_group_ID">Invalid Group ID</string>
    <string name="addgroup_alias_hint">Set an alias for this group</string>
    <string name="addgroup_optional_title">Optional Extras</string>
    <string name="friend_profile_nick">Nickname</string>
    <string name="friend_profile_key">Tox ID</string>
    <string name="friend_profile_note">Status</string>
    <string name="friend_profile_button">Update</string>
    <string name="friend_profile_updated">The profile has been updated</string>
    <string name="friend_profile_copied">Tox ID Copied</string>
    <string name="group_profile_peer_list_head">Participants</string>
    <string name="friend_profile_title">%1$s\'s Profile</string>
    <string name="friendrequest_accept">Accept</string>
    <string name="friendrequest_reject">Reject</string>
    <string name="friend_request">New Friend Request</string>
    <string name="groupinvite_accept">Accept</string>
    <string name="groupinvite_reject">Reject</string>
    <string name="group_invite">New Group Invite</string>
    <string name="invited_by">You were invited by </string>
    <string name="friend_action_profile">Profile</string>
    <string name="friend_action_delete">Remove Friend</string>
    <string name="friend_action_export_chat">Export Chat Logs</string>
    <string name="friend_action_delete_chat">Delete Chat Logs</string>
    <string name="friend_action_block">Block</string>
    <string name="friend_accepted_default_status">Friend Accepted</string>
    <string name="group_default_peer_name">Anonymous</string>
    <string name="group_action_delete">Leave Group</string>
    <string name="contacts_actions_on">Actions on</string>
    <string name="contacts_delimiter_requests">Requests</string>
    <string name="contacts_delimiter_invites">Group Invites</string>
    <string name="contacts_delimiter_groups">Groups</string>
    <string name="contacts_delimiter_friends">Friends</string>
    <string name="contacts_delimiter_offline">Offline</string>
    <string name="contacts_delimiter_online">Online</string>
    <string name="contacts_resend_friend_request">Resend Friend Request</string>
    <string name="friend_sent_image">%s sent an image.</string>
    <string name="friend_sent_file">%s sent a file.</string>
    <string name="you_sent_image">You sent an image.</string>
    <string name="you_sent_file">You sent a file.</string>
    <string name="friend_action_delete_friend_confirmation">Are you sure you want to remove this friend?</string>
    <string name="friend_action_chat_log_exported">Chat log successfully exported to %s</string>
    <string name="friend_action_chat_log_export_failed">Chat log export failed. </string>
    <string name="friend_action_delete_chat_confirmation">Are you sure you want to delete the chat logs?</string>
    <string name="friend_action_block_friend_confirmation">Blocking this user will remove them from your friends list and you will no longer see friend
        requests from them.\n\nAre you sure you wish to continue?</string>
    <string name="reset_tox_id_dialog_message">Resetting your Tox ID changes your ID permanently. You will
        keep your current contacts list, but other people won\'t be able to add you using your old ID. </string>
    <string name="reset_tox_id_dialog_title">Confirm Tox ID Reset</string>
    <string name="reset_tox_id_dialog_confirm">Reset ID</string>
    <string name="reset_tox_id_dialog_cancel">Cancel</string>
    <string name="tox_id_reset">Your Tox ID has been reset</string>
    <string name="delete_account_dialog_message">This will permanently delete this Antox user and remove you from any ToxMe service tied to your account</string>
    <string name="delete_account_dialog_title">Confirm WangWang Account Deletion</string>
    <string name="delete_account_dialog_confirm">Delete Account</string>
    <string name="delete_account_dialog_cancel">Cancel</string>
    <string name="delete_account_successful">Account was successfully deleted</string>
    <string name="delete_account_error">An error occurred while deleting your WangWang accont</string>
    <string name="create_group_dialog_message">Create a new Group Chat</string>
    <string name="create_group_dialog_create_group">Create Group</string>
    <string name="create_group_dialog_cancel">Cancel</string>
    <string name="create_group_dialog_name_header">Group Name</string>
    <string name="group_default_part_message">Goodbye</string>
    <string name="dialog_color_picker_title">Select theme color</string>
    <string name="attachment_photo">Attach photo</string>
    <string name="attachment_file">Attach File</string>
    <string name="attachment_takephoto">Take photo</string>
    <string name="message_copy">Copy message</string>
    <string name="message_delete">Delete message</string>
    <string name="file_delete">Delete file</string>
    <string name="titles_recent">Recent</string>
    <string name="titles_contacts">Contacts</string>
    <string name="titles_settings">Settings</string>
    <string name="button_confirm">Confirm</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="button_ok">OK</string>
    <string name="dialog_tox_id">Copy Tox ID to clipboard</string>
    <string name="dialog_toxme">Copy to clipboard</string>
    <string name="dialog_password">Copy to clipboard</string>
    <string name="share_with">Share with</string>
    <string name="connection_has">has</string>
    <string name="connection_online">come online</string>
    <string name="connection_offline">gone offline</string>
    <string name="title_activity_create_account">CreateAccountActivity</string>
    <string name="action_settings">Settings</string>
    <string name="dialog_avatar_take_photo">Take Photo</string>
    <string name="dialog_avatar_use_file">Use File</string>
    <string name="avatar_too_large_error">Error: Avatar file too large.</string>
    <string name="no_camera_intent_error">Error: No valid camera application found.</string>
    <string name="dialog_avatar_description">avatar</string>
    <string name="file_finished">Finished</string>
    <string name="file_failed">Failed</string>
    <string name="file_in_progress">In Progress</string>
    <string name="file_request_sent">Sent Request</string>
    <string name="tab_menu_alert">Message</string>
    <string name="tab_menu_profile">Contacts</string>
    <string name="tab_menu_friends">SNS</string>
    <string name="tab_menu_pay">Find</string>
    <string name="tab_menu_setting">User</string>
</resources>