<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.wangwang.wangwang.activity.FirstActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#c1000000"
        android:id="@+id/re_first_menu">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/text_first_title"
            android:text="汪汪"
            android:textSize="24sp"
            android:textColor="#ffffff"
            android:gravity="center"
            android:layout_marginLeft="16dp"/>
        <!--<ImageButton-->
            <!--android:layout_width="70dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:id="@+id/imagebt_first_search"-->
            <!--android:background="@drawable/add"-->
            <!--android:layout_alignParentTop="true"-->
            <!--android:layout_alignParentRight="true"-->
            <!--android:layout_alignParentEnd="true" />-->
        <!--<ImageButton-->
            <!--android:layout_width="70dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:id="@+id/imagebt_first_menus"-->
            <!--android:background="@drawable/search"-->
            <!--android:layout_alignParentTop="true"-->
            <!--android:layout_toLeftOf="@+id/imagebt_first_search"-->
            <!--android:layout_toStartOf="@+id/imagebt_first_search"-->
            <!--android:layout_marginRight="5dp"-->
            <!--android:layout_marginEnd="10dp" />-->
    </RelativeLayout>
    <android.support.v4.view.ViewPager
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/view_first_layout"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="58dp"
        android:layout_below="@+id/re_first_menu">

    </android.support.v4.view.ViewPager>
    <RadioGroup
        android:id="@+id/rg_tab_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="2dp"
        android:background="#ffffff"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_channel"
            style="@style/tab_menu_item"
            android:drawableTop="@drawable/tab_menu_channel"
            android:text="@string/tab_menu_alert" />

        <RadioButton
            android:id="@+id/rb_message"
            style="@style/tab_menu_item"
            android:drawableTop="@drawable/tab_menu_message"
            android:text="@string/tab_menu_profile" />

        <RadioButton
            android:id="@+id/rb_friends"
            style="@style/tab_menu_item"
            android:drawableTop="@drawable/tab_menu_friends"
            android:text="@string/tab_menu_friends" />

        <RadioButton
            android:id="@+id/rb_better"
            style="@style/tab_menu_item"
            android:drawableTop="@drawable/tab_menu_better"
            android:text="@string/tab_menu_pay" />

        <RadioButton
            android:id="@+id/rb_setting"
            style="@style/tab_menu_item"
            android:drawableTop="@drawable/tab_menu_setting"
            android:text="@string/tab_menu_setting" />

    </RadioGroup>

</RelativeLayout>
